--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="contact-info">
             <h2>Informasi </h2>
             <p>Nama: Ibnu Jarir Ath Thobari</p>
-            <p>Tempat, Tgl Lahir: Sukoharjo 26 Februari 2005</p>
+            <p>Tempat, Tgl Lahir: Karanganyar 26 Februari 2005</p>
             <p>Email: thobari.mutu@gmail.com</p>
             <p>Telepon: +6287749832868</p>
             <p>Alamat: Jl. Solo-Sukoharjo, Ngemul, Sidorejo, Bendosari, Sukoharjo, Jawa Tengah, Indonesia</p>
