--- a/index.html
+++ b/index.html
@@ -1,53 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Saya</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dalam Pengembangan</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .card {
+      text-align: center;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <div class="cv-container">
-        <header>
-            <h1>CURRICULUM VITAE</h1>
-            <img src="img/12247 (1) (1).JPG"  alt="">
-        </header>
-        <section class="contact-info">
-            <h2>Informasi </h2>
-            <p>Nama: Ibnu Jarir Ath Thobari</p>
-            <p>Tempat, Tgl Lahir: Karanganyar 26 Februari 2005</p>
-            <p>Email: thobari.mutu@gmail.com</p>
-            <p>Telepon: +6287749832868</p>
-            <p>Alamat: Jl. Solo-Sukoharjo, Ngemul, Sidorejo, Bendosari, Sukoharjo, Jawa Tengah, Indonesia</p>
-        </section>
-        <section class="education">
-            <h2>Pendidikan</h2>
-            <div class="item">
-                <h3>Formal</h3>
-                <p>SD: MIN 1 Karanganyar</p>
-                <p>Tahun: 2012 - 2018</p>
-                <p>SMP: MTsN 2 Sukoharjo</p>
-                <p>Tahun: 2020 - 2023</p>
-                <p>SMK: SMK Muhammadiyah 1 Sukoharjo</p>
-                <p>Tahun: 2023 - 2025</p>
-            </div>
-        </section>
-        <section class="experience">
-            <h2>Sertifikat</h2>
-            <div class="item">
-                <p><a href="https://drive.google.com/file/d/1qmZTjPtcdiS8kb1tF_Xr9JGUWWC54_4k/view?usp=drive_link">Sertifikat Dicoding Memulai Pemrograman Dengan Python</a></p>
-                <p><a href="https://drive.google.com/file/d/1_ISUPM2A16t4gx8wun2vJgfYv5PbFIgN/view?usp=drive_link">Sertifikat Dicoding Memulai Pemrograman Dengan Dart</a></p>
-                <p><a href="https://drive.google.com/file/d/1mnJcOajf5AY3f2AlpNB6AzKP21j8bEOx/view?usp=drive_link">Sertifikat Dicoding Belajar Membuat Aplikasi Flutter Untuk Pemula</a></p>
-            </div>
-        </section>
-        <section class="skills">
-            <h2>Keterampilan</h2>
-            <ul>
-                <li>Basic HTML, CSS, JavaScript</li>
-                <li>Basic Dart, Flutter</li>
-                <li>Basic Microsoft Office Word, Excel & Power Point</li>
-            </ul>
-        </section>
-    </div>
+  <div class="card">
+    <h1 class="mb-3 text-warning">🚧 Website Masih Dalam Pengembangan</h1>
+    <p class="text-muted">Kami sedang bekerja keras untuk segera merilis versi terbaik dari website ini.</p>
+    <p class="text-muted">Silakan kembali lagi nanti.</p>
+  </div>
 </body>
 </html>
